--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "packages/astro/test/fixtures/static build/pkg"
   ],
   "engines": {
-    "node": "^14.18.0 || >=16.12.0",
+    "node": "18.12.1",
     "pnpm": ">=7.9.5"
   },
   "packageManager": "pnpm@7.12.2",
@@ -73,28 +73,28 @@
     }
   },
   "dependencies": {
-    "@astrojs/webapi": "workspace:*"
+    "@astrojs/webapi": "workspace:1.1.1"
   },
   "devDependencies": {
     "@changesets/changelog-github": "0.4.4",
     "@changesets/cli": "2.23.0",
     "@octokit/action": "^3.18.1",
-    "@types/node": "^18.7.21",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "del": "^7.0.0",
-    "esbuild": "^0.14.43",
-    "eslint": "^8.17.0",
+    "esbuild": "^0.14.54",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-no-only-tests": "^2.6.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "execa": "^6.1.0",
     "organize-imports-cli": "^0.10.0",
-    "prettier": "^2.7.0",
+    "prettier": "^2.8.0",
     "prettier-plugin-astro": "^0.7.0",
     "pretty-bytes": "^6.0.0",
     "tiny-glob": "^0.2.9",
     "turbo": "1.2.5",
-    "typescript": "~4.7.3"
+    "typescript": "~4.7.4"
   }
 }
