--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
   ],
   "engines": {
     "node": "18.12.1",
-    "pnpm": ">=7.9.5"
+    "pnpm": "7.17.1"
   },
-  "packageManager": "pnpm@7.12.2",
+  "packageManager": "pnpm@7.17.1",
   "pnpm": {
     "packageExtensions": {
       "svelte2tsx": {
